--- a/mod1.html
+++ b/mod1.html
@@ -5,7 +5,16 @@
     <title>Module 1</title>
   </head>
   <body>
-    Hello from Module 1!
+    <img src='images/pb.png' width='1000px'>
+    <h1>meme</h1>
+    <p>
+      I did a sentecne yay.                                                   
+      <a href='code/module.js' target='_blank' >Here</a> is 100% completion.
+    </p>
+    <video width="636" height="354" controls>
+      <source src="m4v/yumyumnoodleshop.m4v" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
     <script src='js/mod1.js'></script>
   </body>
 </html>
