--- a/mod4.html
+++ b/mod4.html
@@ -2,10 +2,10 @@
   <head>
     <link rel='stylesheet' type='text/css' href='style/mod4.css'>
     <link rel="shortcut icon" type="image/png" href="images/eddies.png"/>
-    <title>Module 4</title>
+    <title>Python</title>
   </head>
   <body>
-    Hello from Module 4!
+    This is Python, Pythong is this.
     <script src='js/mod4.js'></script>
   </body>
 </html>
