--- a/mod4.html
+++ b/mod4.html
@@ -5,7 +5,7 @@
     <title>Python</title>
   </head>
   <body>
-    This is Python, Pythong is this.
+    This is Python, Python is this.
     <script src='js/mod4.js'></script>
   </body>
 </html>
