--- a/mod4.html
+++ b/mod4.html
@@ -2,7 +2,7 @@
   <head>
     <link rel='stylesheet' type='text/css' href='style/mod4.css'>
     <link rel="shortcut icon" type="image/png" href="images/eddies.png"/>
-    <title>Python</title>
+    <title>Python Module</title>
   </head>
   <body>
     This is Python, Python is this.
