--- a/mod1.html
+++ b/mod1.html
@@ -9,7 +9,7 @@
     <h1>meme</h1>
     <p>
       I did a sentecne yay.                                                   
-      <a href='code/module.py' target='_blank' >Here</a> is 100% completion.
+      <a href='code/module1.py' target='_blank' >Here</a> is 100% completion.
     </p>
     <video width="636" height="354" controls>
       <source src="m4v/yumyumnoodleshop.m4v" type="video/mp4">
