--- a/mod1.html
+++ b/mod1.html
@@ -2,13 +2,13 @@
   <head>
     <link rel='stylesheet' type='text/css' href='style/mod1.css'>
     <link rel="shortcut icon" type="image/png" href="images/eddies.png"/>
-    <title>Module 1</title>
+    <title>Python</title>
   </head>
   <body>
-    <img src='images/pb.png' width='150px'>
+    <img src='' width='150px'>
     <h1>Introductions on Udacity</h1>
     <p>
-      I did a sentecne yay.                                                   
+     This is Python, Python is this.                                                   
       <a href='code/module1.py' target='_blank' >Here</a> is 100% completion.
     </p>
     <video width="636" height="354" controls>
