--- a/mod1.html
+++ b/mod1.html
@@ -5,7 +5,7 @@
     <title>Python</title>
   </head>
   <body>
-    <img src='images/1.png' width='150px'>
+    <img src='images/1.jpg' width='150px'>
     <h1>Introductions on Udacity</h1>
     <p>
      This is Python, Python is this.                                                   
