--- a/mod5.html
+++ b/mod5.html
@@ -5,7 +5,10 @@
     <title>Module 5</title>
   </head>
   <body>
-    Hello from Module 5!
-    <script src='js/mod5.js'></script>
+    <h1>lists in the Scheme Programming Langauge</h1>
+    <img src="images/scheme.png" width="400px">
+    <p>
+      I was giving a problem that involved creating a list in Scheme and getting a particular element from that list using the built-in functions called "car" and "cdr'. I created a list called "listA" that contained 7 elements which where the numbers 1 through 7. I then used "care" and a series of 'cdr"s to obtain the desired element. Finall, I used a short hand for 'car" and "cdr" to obtain the sam element in less keystrokes. <a src="code/scheme-list-fun.ss">Here</a> is a the code i wrote.
+      <script src='js/mod5.js'></script>
   </body>
 </html>
