--- a/mod5.html
+++ b/mod5.html
@@ -5,6 +5,7 @@
     <title>Module 5</title>
   </head>
   <body>
+    <ima src="images/sheme.jpg" width="200px">
     <h1>lists in the Scheme Programming Langauge</h1>
     <img src="images/scheme.png" width="400px">
     <p>
